Password Safe 3.02 Release Note - June 2006evert

===========================================

This note describe the new features, fixed bugs and known problems
with Password Safe version 3.02. For a short description of Password
Safe, please see the accompanying README.txt file. For more
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to previous
releases may be found in the file ChangeLog.txt.

New Features for 3.02
=====================
[] Password history can now be saved for selected entries
[] Export/import to/from XML supported
[] Selective text export
[1516674] Ability to hide password during Add & Edit entry. If hidden,
password needs to be entered twice to verify. 

Bugs fixed in 3.02
==================
[1503123] Exits cleanly from lock with open dialog box.
[1503075] No longer crashes when number of last databases is set to
zero.
[1507847] Merge databases now merges all the record's fields, thanks
to n0tig.
[] Minimum master passphrase length is now 8 characters, and user is
not offered the option of accepting weak passphrases.
[1513482] Preferences now saved in the .psafe3 file
[1504107] No longer saves cleared database
[1515994] User is now prompted to save database on system shutdown
[1519227] Password expires date set wrong

New Features for 3.01
=====================
[726518] User can configure an expiration date for entries and be
notified accordingly.
[726508] Modification and access times now recorded.
[737878] Copy Notes to Clipboard
[1162051] Toolbar additions (Autotype, Browse URL, Copy Notes to clipboard)
[1465395] View Passwords in Nested Tree Mode
[] Ability to clear "Recent Database List"
[] Browse to URL now starts a new instance of the user's default browser
rather than taking over an existing instance

Bugs fixed in 3.01
==================
[1482002] Generated password no longer trashed if > 127 bytes
[1495670] Find now searches new URL and Autotype fields