@@ -1443,19 +1443,32 @@ DboxMain::OnOK()
     Save();
 
   if (m_core.IsChanged()) {
-    rc = MessageBox(_T("Do you want to save changes to the password list?"),
-                    AfxGetAppName(),
-                    MB_ICONQUESTION|MB_YESNOCANCEL);
-    switch (rc) {
-	case IDCANCEL:
-	  return;
-	case IDYES:
-	  rc2 = Save();
-	  if (rc2 != PWScore::SUCCESS)
-        return;
-	case IDNO:
-	  break;
-    }
+  	const CString msg = _T("Do you want to save changes to the password list?");
+	switch (m_iSessionEndingStatus) {
+		case IDIGNORE:
+			// Session is not ending - user has an option to cancel
+			rc = MessageBox(msg, AfxGetAppName(), MB_ICONQUESTION | MB_YESNOCANCEL);
+			break;
+		case IDOK:
+			// Session is ending - user does not have an option to cancel
+			rc = MessageBox(msg, AfxGetAppName(), MB_ICONQUESTION | MB_YESNO);
+			break;
+		case IDNO:
+		case IDYES:
+			// IDYES: Don't ask - user already said YES during OnQueryEndSession
+			// IDNO:  Don't ask - user already said NO during OnQueryEndSession
+			rc = m_iSessionEndingStatus;
+	}
+	switch (rc) {
+		case IDCANCEL:
+			return;
+		case IDYES:
+			rc2 = Save();
+			if (rc2 != PWScore::SUCCESS)
+				return;
+		case IDNO:
+			break;
+	}
   } // core.IsChanged()
 
   //Store current filename for next time...
@@ -1470,7 +1483,7 @@ DboxMain::OnOK()
   // c. the system is shutting down, restarting or the user is logging off
   if ((!IsWindowVisible() && prefs->GetPref(PWSprefs::UseSystemTray)) ||
       prefs->GetPref(PWSprefs::DontAskMinimizeClearYesNo) ||
-      m_bSessionEnding) {
+      (m_iSessionEndingStatus == IDYES)) {
 		app.ClearClipboardData();
   }
 
